greenit_website/static/styles.css
body {
    margin-left: 0rem;
    margin-right: 0px;
    margin-top: 0px;
}

.header {
    background-color: #A1CBF7;
    border-radius: 25px;
}

.header2 {
    display: block;
    background-color: #A1CBF7;
    margin-top: -40px;
}

.topbanner {
    display: flex;
    margin-top: 0px;
    margin-right: 0px;
    width: 100%;
    min-height: 350px;
    height: auto;
    background-color: #A1CBF7;
    border-radius: 15px;
    -webkit-box-align: center;
    justify-content: center;
    align-items: center;
}

.topbannertext {
    display: inline;
    text-align: center;
    width: 80%;
}

.footer {
    display: flex;
    -webkit-box-pack: center;
    justify-content: center;
    height: 200px;
    margin-top: 10rem;
    margin-bottom: -40px;
    background-color: #9b9b9b;
    border-radius: 25px;
}

.footer2 {
    display: block;
    height: 40px;
    margin-bottom: -40px;
    background-color: #9b9b9b;
}



/* below import my personal font */

@font-face {
    font-family: MyWebFont;
    src: local('Ubuntu-Medium'), url('/static/font/Ubuntu/Ubuntu-Medium.ttf') format('truetype'); 
}

@font-face {
    font-family: MyWebFontRegular;
    src: local('Ubuntu-Regular'), url('/static/font/Ubuntu/Ubuntu-Regular.ttf') format('truetype'); 
}

@font-face {
    font-family: MyWebFontItalic;
    src: local('Ubuntu-Italic'), url('/static/font/Ubuntu/Ubuntu-Italic.tff') format('truetype'); 
}

@font-face {
    font-family: MyWebFontLight;
    src: local('Ubuntu-Light'), url('/static/font/Ubuntu/Ubuntu-Light.ttf') format('truetype'); 
}

@font-face {
    font-family: MyWebFontLightItalic;
    src: local('Ubuntu-LightItalic'), url('/static/font/Ubuntu/Ubuntu-LightItalic.ttf') format('truetype'); 
}

/*below are all " h text " for the all page */

h1 {
    font-family: MyWebFontRegular;
    display: block;
    color:white; 
    font-size: 60px;
    margin-top: 0px;
    margin-bottom: 10px;
}

h2 {
    font-family: MyWebFontRegular;
    display: inline-block;
    color:white; 
    font-size: 23px;
    margin-top: 0px;
    max-width: 450px;
}

h3 {
    font-family: MyWebFontRegular;
    display: inline-block;
    color:#9ED0FB; 
    font-size: 20px;
    margin-top: 0px;
    max-width: 400px;
}

h4 {
    font-family: MyWebFontRegular;
    display: inline-block;
    color:#A3E6DE; 
    font-size: 20px;
    margin-top: 0px;
    max-width: 400px;
    margin-bottom: 30px;
}

h5 {
    font-family: MyWebFontRegular;
    display: inline-block;
    color:#9AE3B4; 
    font-size: 20px;
    margin-top: 0px;
    max-width: 400px;
    margin-bottom: 20px;
}

h6 {
    font-family: MyWebFontRegular;
    display: inline-block;
    color:#C2E69C; 
    font-size: 16px;
    margin-top: 0px;
    max-width: 400px;
    margin-bottom: 20px;
}

h7 {
    font-family: MyWebFontRegular;
    display: inline-block;
    color:#F2D493; 
    font-size: 16px;
    margin-top: 0px;
    max-width: 400px;
    margin-bottom: 20px;
}

h8 {
    font-family: MyWebFontRegular;
    display: inline-block;
    color:#FEC4B0; 
    font-size: 16px;
    margin-top: 0px;
    max-width: 400px;
    margin-bottom: 20px;
}

h9 {
    font-family: MyWebFontRegular;
    display: inline-block;
    color:#95CDFB; 
    font-size: 16px;
    margin-top: 0px;
    max-width: 400px;
    margin-bottom: 20px;
}

h10 {
    font-size: auto;
}

/*h11 is for FAQ answers */
h11 {
    font-size: 14px;
    color: #707070;
    font-family: MyWebFontRegular;
}

/*h111 is for FAQ questions */
h111 {
    font-size: 14px;
    color:#7fb9e9;
    font-family: MyWebFontRegular;
}

/*h12 is "Berlin" */
h12 {
    font-family: MyWebFontRegular;
    display: inline-block;
    color:#707070; 
    font-size: 16px;
    margin-bottom: 2vh;
}

/*h13 is "Producer" */
h13 {
    font-family: MyWebFont;
    display: inline-block;
    color:#707070; 
    font-size: 20px;
    margin-bottom: 30px;
}

/*h131 is "products" */
h131 {
    font-family: MyWebFont;
    display: inline-block;
    color:#707070; 
    font-size: 20px;
}

/*h14 is "Adrien" */
h14 {
    font-family: MyWebFont;
    display: inline-block;
    color:#95CDFB; 
    font-size: auto;
    margin-top: 0px;
    margin-bottom: 5px;
}

h15 {
    font-family: MyWebFontLightItalic;
    display: inline-block;
    color:#707070; 
    font-size: 14px;
    margin-top: 0px;
    margin-bottom: 5px;
}

h16 {
    font-family: MyWebFont;
    display: inline-block;
    color:#707070; 
    font-size: 18px;
    margin-bottom: 10px;
}

h17 {
    font-family: MyWebFont;
    display: inline-block;
    color:#707070; 
    font-size: 18px;
    margin-bottom: 30px;
}

h18 {
    font-family: MyWebFont;
    display: inline-block;
    color:#A3E6DE; 
    font-size: auto;
    margin-top: 0px;
}

h19 {
    color: white;
    font-family: MyWebFontLight;
    font-size: 16px;
}

/*images css for the first section stuff below */

.logotop{
    width: 100%;
    display: flex;
    justify-content: center;
    position: absolute;
    margin-top: -50px;
}

.imagetop{
    height: 12vh;
    width: auto;
    max-height: 100px;
    min-height: 50px;
}

.imageDescription1{
    height: 14vh;
    width: auto;
    display: block;
    margin-bottom: 1vh;
    margin-top: 2vh;
}

.imageDescription2{
    height: 12vh;
    display: block;
    margin-bottom: 2vh;
    margin-top: 2vh;
}

.imageDescription3{
    height: 15vh;
    display: block;
    transform: rotate(45deg);
}

.imageDescription4{
    width: 15vh;
    min-width: 90px;
    display: block;
}

.imageDescriptionSub{
    width: 70%;
    height: intrinsic;
    min-width: 170px;
    max-width: 200px;
    display: block;
}

/*grid explanation section 1 css stuff below */

.container{
    display: grid;
    height: auto;
    margin-left: 15%;
    margin-right: 15%;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 0.2fr 2.2fr;
    grid-template-areas:
    "top top top" 
    "content1 content2 content3";
    grid-gap: 2em;
    font-family: MyWebFont;
    margin-top: 2%;
}
/* ... */

